Endpoint to update anime poster has been added
